--------------------------------------------------------------------------------------------------------------------------------------------
TAG v04_08_00
--------------------------------------------------------------------------------------------------------------------------------------------
Support for graph building

--------------------------------------------------------------------------------------------------------------------------------------------
TAG v04_07_02
--------------------------------------------------------------------------------------------------------------------------------------------
Clang format updates

--------------------------------------------------------------------------------------------------------------------------------------------
TAG v04_07_00
--------------------------------------------------------------------------------------------------------------------------------------------
Refactoring of code to support DUNE ND developments
Vertex refinement bug fix to ensure correct weight application

--------------------------------------------------------------------------------------------------------------------------------------------
TAG v04_06_02
--------------------------------------------------------------------------------------------------------------------------------------------
Git actions workflow updates to reflect upstream changes in ROOT

--------------------------------------------------------------------------------------------------------------------------------------------
TAG v04_06_01
--------------------------------------------------------------------------------------------------------------------------------------------
build with libtorch v2_1_1

--------------------------------------------------------------------------------------------------------------------------------------------
TAG v04_06_00