@@ -1,4 +1,9 @@
 --------------------------------------------------------------------------------------------------------------------------------------------
+TAG v04_08_01
+--------------------------------------------------------------------------------------------------------------------------------------------
+Remove Eigen dependency from DL library
+
+--------------------------------------------------------------------------------------------------------------------------------------------
 TAG v04_08_00
 --------------------------------------------------------------------------------------------------------------------------------------------
 Support for graph building
